# B5T-007001_HVC-P2_for-android

./: README.md  ReadMe.txt  ReadMe_J.txt  RevisionHistory.txt  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: stblib.cpp
app/src/main/java/ip/co/omron/HvcP2_Api/: Connector.java  GrayscaleImage.java  HvcP2Api.java  HvcP2Wrapper.java  HvcResult.java  HvcResultC.java  HvcTrackingResult.java  HvcTrackingResultC.java  OkaoResult.java  P2Def.java  SerialConnector.java  Stabilization.java
app/src/main/java/ip/co/omron/HvcP2_sample/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: device_filter.xml
gradle/wrapper/: gradle-wrapper.properties
